--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
        </div>
         <div class="col-md-4">
           <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p>Pinocho, si eres valiente, sincero y desinteresado, algún día serás un niño de verdad —dijo el hada azul—. Luego se volvió hacia un grillo llamado Pepe Grillo, que vivía en la alacena de Gepeto</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
       </div>
